--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,9 +10,7 @@
   "author": "Sushant Mimani",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.6.4",
-    "body-parser": "^1.18.1",
-    "express": "^4.15.4"
+    "angular": "^1.6.4"
   },
   "devDependencies": {
     "nodemon": "^1.12.0"
