--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,7 +10,9 @@
   "author": "Sushant Mimani",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.6.4"
+    "angular": "^1.6.4",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2"
   },
   "devDependencies": {
     "nodemon": "^1.12.0"
