--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "angular": "^1.6.4",
     "body-parser": "^1.18.2",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "ngstorage": "^0.3.11"
   },
   "devDependencies": {
     "nodemon": "^1.12.0"
