Handle local storage reset

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.6.4",
+    "angular-uuid": "0.0.4",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "ngstorage": "^0.3.11"
